src/tests/errors/ivdserial/remorafinalizedclass.ivdserial
The IVD compiler has encountered the following error:
Syntax error on line 24:
@top
 ^
Remora host class already finalized.

---------------------------------------------------
=================================Element========================================
Path: topInstance
------------------------------------------Body
-----------------------------State default
